# Demand_Forecasting_System

./: .gitignore  CLAUDE.md  CLAUDE.original.md  README.md  REFLECTIONS.md  REFLECTIONS.original.md  SPEC.md  SPEC.original.md  append_readme.py  caching_parallelism.md  changesMade.md  pyproject.toml  requirements.txt  run_eda.py  skills-lock.json  stabilize_forecasting_pipeline.plan.md
.claude/: settings.local.json
.cursor/rules/: always-caveman-style.mdc
Learn/: 01_System_Topology_and_State_Machine.md  02_The_Physics_of_Sales_and_Metrics.md  03_Model_Deep_Dive_and_Forensic_Analysis.md  04_Cannibalization_and_Lift_Mastery.md  05_Prescriptive_Profit_Optimization.md  06_Data_Leakage_Vectors_and_Zero_Copy_Resilience.md
Learn_minmax_insights/: 00_Prompt_Blindspots_Rectified.md  01_System_Architecture.md  02_Data_Intelligence_EDA.md  03_Mathematics_of_Forecasting.md  04_Cannibalization_and_Lift.md  05_Actionable_Insights_Framework.md
dashboard/: ARCHITECTURE.md  app.py  db.py  models.py  seed_db.py
dashboard/templates/: index.html
docs/: Literature_Review_30_Papers.md  Literature_Review_IEEE.md  Paper_Division.md  Smart_Retail_Demand_Forecasting_Roadmap.md  optimization_strategy.md  optimization_strategy.original.md  project_summary.md  slides.md
notebooks/: advanced_models.ipynb  baseline_models.ipynb  cannibalization.ipynb  eda.ipynb  eda_executed.ipynb  evaluation.ipynb
scripts/: convert_to_parquet.py  patch_eda_notebook.py  verify_optimizations.py
src/retail_iq/: config.py  evaluation.py  features.py  (+4 more)
tests/: perf_regression_harness.py  test_retail_iq.py
