[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retail_iq"
version = "1.0.0"
description = "Retail Sales Forecasting System"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "statsmodels",
    "xgboost",
    "lightgbm",
    "optuna",
    "shap",
    "joblib",
    "flask",
    "tabulate",
    "pytest",
    "polars",
    "pyarrow"
]

[tool.setuptools.package-dir]
"" = "src"
